<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/ddBrightYellow">

    <CheckBox
        android:id="@+id/dilettante"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="8sp"
        android:paddingBottom="8sp"
        android:fontFamily="@font/caslon_antique_bold"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:text="@string/skill_list_option_dilettante"/>

    <!--  really seems dumb to duplicate all these text attributes; if only
          Android had support for, you know, STYLES or THEMES or something -->

    <CheckBox
        android:id="@+id/show_hidden"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="8sp"
        android:paddingBottom="8sp"
        android:fontFamily="@font/caslon_antique_bold"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:text="@string/skill_list_option_show_hidden"/>

    <TextView
        android:id="@+id/clear_hidden"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8sp"
        android:paddingBottom="8sp"
        android:fontFamily="@font/caslon_antique_bold"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="normal"
        android:text="@string/skill_list_option_clear_hidden"/>

</LinearLayout>
